# solsa

./: .faketravis.yml  .soliumrc.json  .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  README  README.md  faketravis.sh  run_analysis.sh
all-in-one/: Dockerfile  run_analysis.sh
contracts/: echidna.sol
docker-ci-helpers/: oyente-wrapper  solc-wrapper
dockerfiles/: Dockerfile.echidna  Dockerfile.mythril  Dockerfile.oyente  Dockerfile.solc  Dockerfile.solidity-flattener  Dockerfile.solium  oyente.sh
example_contracts/: A.sol  A_test.sol  GnosisWallet.sol  compilation_fail.sol  useless.sol
src/: docker.rs  main.rs  tool_output.rs  tools.rs
templates/: index.html
travis-integration/: .faketravis.yml  faketravis.sh
