[package]
name = "solsa"
version = "0.1.7"
authors = ["Filipe Gonçalves <filipe@impossible.com>"]
license = "ISC"
description = "Static analysis tool aggregator and reporter for Ethereum smart contracts"
repository = "https://github.com/enhancedsociety/solsa"
readme = "README.md"

[badges]
travis-ci = { repository = "enhancedsociety/solsa", branch = "master" }

[dependencies]
clap = "2.31"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"
lazy_static = "1.0.1"